tests/negative/semantic/structure_method_global_conflict/input.ci
void ping() {}

structure S {
    void ping() {}
}

void main() {}
